# caint

./: Cargo.toml
src/: lib.rs  main.rs
src/keys/: key_store.rs  mod.rs  ratchet.rs
src/messaging/: frame.rs
