[package]
name = "caint"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
hkdf = "0.12.4"
rand = "0.8"
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["serde", "static_secrets"] }
# tokio = "1.47.1" # features = ["rt-multi-thread", "macros", "time", "sync"]
# rand = "0.9.2"
# serde = "1.0.219" # features = ["derive"]
# serde_json = "1.0.143"
# ed25519-dalek = "2.2.0" # features = ["std"]
# x25519-dalek = "2.0.1"
# zeroize = "1.8.1"
# chacha20poly1305 = "0.10.1" # features = ["aead"]
# hkdf = "0.12.4"
# sha2 = "0.10.9"
# argon2 = "0.5.3"
# anyhow = "1.0.99"
# log = "0.4.28"
# env_logger = "0.11.8"
# sled = "0.34.7"
# arti = "1.5.0" # default-features = false

# libsignal-protocol = { package = "libsignal-protocol", version = "0.0.0", optional = true }

[features]
default = []
